--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,26 @@
 @tailwind base;
+
+h1 {
+    @apply text-3xl;
+    /*@apply font-neucha;*/
+}
+h2 {
+    @apply text-2xl;
+    /*@apply font-neucha;*/
+}
+
+h3 {
+    @apply text-xl;
+    /*@apply font-semibold;*/
+}
+
+h4 {
+    @apply text-lg;
+    /*@apply font-medium;*/
+}
+
+
+
 @tailwind components;
 @tailwind utilities;
 
